fix graphs, loading gauges, javadocs